--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADclJREFUeJzt3X+IXfWZx/HPY36AJBHMlg6jTTbZIMGaP+wy6IqxdDFW\nVwJJQSWiMKWlEyHCFldtTJEEiiCLreYfE6cYG7Vru6JiLNIfhlJT0WIM/krc6WRDYmfIj0qKsfpH\nnZln/7gn3VHnfs/NPffcc67P+wXD3Huee855uOSTc879njtfc3cBiOesqhsAUA3CDwRF+IGgCD8Q\nFOEHgiL8QFCEHwiK8ANBEX4gqNnd3JmZcTshUDJ3t1ZeV+jIb2bXmNmImR00s41FtgWgu6zde/vN\nbJakP0q6StKYpFcl3ejuBxLrcOQHStaNI/8lkg66+yF3/5ukn0laU2B7ALqoSPjPl/Snac/HsmWf\nYGZDZrbXzPYW2BeADiv9Az93H5Y0LHHaD9RJkSP/uKRF055/KVsGoAcUCf+rki4ws6VmNlfSOkm7\nOtMWgLK1fdrv7hNmdqukX0maJWmHu+/vWGcAStX2UF9bO+OaHyhdV27yAdC7CD8QFOEHgiL8QFCE\nHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQ\nhB8IivADQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiq7Sm6JcnMDkv6QNKkpAl3H+hEU/gks/Sk\nq+vWrWta27x5c3Ld5cuXt9VTJ4yMjCTrV155ZbJ+/PjxZH1iYuKMe4qkUPgz/+ru73VgOwC6iNN+\nIKii4XdJvzaz18xsqBMNAeiOoqf9K9193My+KOk3ZvY/7v7i9Bdk/ynwHwNQM4WO/O4+nv0+IekZ\nSZfM8Jphdx/gw0CgXtoOv5nNM7MFpx9L+rqktzvVGIByFTnt75P0TDYMNVvSf7n7LzvSFYDSmbt3\nb2dm3dtZDznrrPQJ2IYNG5L1rVu3tr3vqampZP2jjz5K1mfNmpWsn3322WfcU6v279+frK9atapp\nLe8egV7m7ukbQzIM9QFBEX4gKMIPBEX4gaAIPxAU4QeCYqivBoaG0nc/b9++ve1tT05OJutbtmxJ\n1u+5555kffHixcn6HXfc0bR2yy23JNfNG0bMkxoKvPzyy5Prnjp1qtC+q8RQH4Akwg8ERfiBoAg/\nEBThB4Ii/EBQhB8IinH+Lsgbr37ssceS9dSf5s6TN05/9913t73toq6//vpk/YEHHkjW+/v72973\neeedl6wfO3as7W1XjXF+AEmEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4/xdkDcePT4+Xmj7qe+tr169\nOrnukSNHCu27TC+99FKyftlll7W9bcb5OfIDYRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCz815gZjsk\nrZZ0wt1XZMsWSvq5pCWSDku6wd3/Ul6bvW3t2rWF1v/444+T9TvvvLNprc7j+HluuummZP3ll19O\n1vv6+prWBgcHk+ved999yXrefAi9oJUj/08kXfOpZRsl7Xb3CyTtzp4D6CG54Xf3FyWd/NTiNZJ2\nZo93Sip2aAPQde1e8/e5+9Hs8TFJzc+vANRS7jV/Hnf31D37ZjYkKT0ZHYCua/fIf9zM+iUp+32i\n2QvdfdjdB9x9oM19AShBu+HfJen0x6WDkp7tTDsAuiU3/Gb2hKSXJS03szEz+7akeyVdZWajklZl\nzwH0EL7P3wELFixI1vft25esL1u2LFkfHR1N1pcvX56sf17de2/6mJO6/yHPhRdemKyPjIy0ve2y\n8X1+AEmEHwiK8ANBEX4gKMIPBEX4gaAK394Lae7cucl63lAe2nPgwIHStr1+/fpk/bbbbitt393C\nkR8IivADQRF+ICjCDwRF+IGgCD8QFOEHgmKcvwcUncIbmAlHfiAowg8ERfiBoAg/EBThB4Ii/EBQ\nhB8IinH+Drj55ptL3f4jjzxS6vYRE0d+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwgqd5zfzHZIWi3p\nhLuvyJZtkfQdSX/OXrbJ3Z8vq8m6W7p0adUtAGeslSP/TyRdM8Py+9394uwnbPCBXpUbfnd/UdLJ\nLvQCoIuKXPPfamZvmtkOMzu3Yx0B6Ip2w79N0jJJF0s6KumHzV5oZkNmttfM9ra5LwAlaCv87n7c\n3SfdfUrSjyVdknjtsLsPuPtAu00C6Ly2wm9m/dOefkPS251pB0C3tDLU94Skr0n6gpmNSdos6Wtm\ndrEkl3RYUno+YwC1kxt+d79xhsUPl9ALgC7iDj8gKMIPBEX4gaAIPxAU4QeCIvxAUPzp7hr48MMP\nk/V33323S53gtJGRkapbKB1HfiAowg8ERfiBoAg/EBThB4Ii/EBQhB8IinH+Gpg7d26yfs4553Sp\nk3pZvHhxsn777beXtu8nn3yytG3XBUd+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiKcf4OeOONNwqt\nP2fOnGR906ZNyfpzzz1XaP919fjjjyfrK1asaHvbGzduTNbff//9trfdKzjyA0ERfiAowg8ERfiB\noAg/EBThB4Ii/EBQueP8ZrZI0qOS+iS5pGF332pmCyX9XNISSYcl3eDufymv1fratWtXqdtfuHBh\nqduvyl133ZWsX3rppYW2n/rb+w899FBy3cnJyUL77gWtHPknJP2Hu39Z0r9I2mBmX5a0UdJud79A\n0u7sOYAekRt+dz/q7vuyxx9IekfS+ZLWSNqZvWynpLVlNQmg887omt/Mlkj6iqQ/SOpz96NZ6Zga\nlwUAekTL9/ab2XxJT0n6rrufMrO/19zdzcybrDckaahoowA6q6Ujv5nNUSP4P3X3p7PFx82sP6v3\nSzox07ruPuzuA+4+0ImGAXRGbvitcYh/WNI77v6jaaVdkgazx4OSnu18ewDKYu4znq3//wvMVkra\nI+ktSVPZ4k1qXPf/t6TFko6oMdR3Mmdb6Z31qHnz5iXrr7zySrJ+0UUXJet5w07bt29vWrv//vuT\n6x46dChZL2rVqlVNa88//3xy3dmz01eledNoX3311U1rn+dpz93d8l/VwjW/u/9eUrONXXkmTQGo\nD+7wA4Ii/EBQhB8IivADQRF+ICjCDwSVO87f0Z19Tsf58/T1pb/28MILLyTrefcBpBw8eDBZf/DB\nB9vetiQNDg4m68uWLWtamz9/fqF9b9iwIVnftm1boe33qlbH+TnyA0ERfiAowg8ERfiBoAg/EBTh\nB4Ii/EBQjPPXwHXXXZesb968OVkvch9AlUZHR5P11Pfxpfzv5E9NTSXrn1eM8wNIIvxAUIQfCIrw\nA0ERfiAowg8ERfiBoBjn7wF5f78+9fcC1q9fn1z3iiuuSNb37NmTrOfZsWNH09rY2Fhy3YmJiUL7\njopxfgBJhB8IivADQRF+ICjCDwRF+IGgCD8QVO44v5ktkvSopD5JLmnY3bea2RZJ35H05+ylm9w9\nOeE64/xA+Vod528l/P2S+t19n5ktkPSapLWSbpD0V3e/r9WmCD9QvlbDn751rLGho5KOZo8/MLN3\nJJ1frD0AVTuja34zWyLpK5L+kC261czeNLMdZnZuk3WGzGyvme0t1CmAjmr53n4zmy/pd5Lucfen\nzaxP0ntqfA7wAzUuDb6Vsw1O+4GSdeyaX5LMbI6kX0j6lbv/aIb6Ekm/cPcVOdsh/EDJOvbFHjMz\nSQ9Lemd68LMPAk/7hqS3z7RJANVp5dP+lZL2SHpL0um/hbxJ0o2SLlbjtP+wpPXZh4OpbXHkB0rW\n0dP+TiH8QPn4Pj+AJMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii\n/EBQuX/As8Pek3Rk2vMvZMvqqK691bUvid7a1cne/rHVF3b1+/yf2bnZXncfqKyBhLr2Vte+JHpr\nV1W9cdoPBEX4gaCqDv9wxftPqWtvde1Lord2VdJbpdf8AKpT9ZEfQEUqCb+ZXWNmI2Z20Mw2VtFD\nM2Z22MzeMrPXq55iLJsG7YSZvT1t2UIz+42ZjWa/Z5wmraLetpjZePbevW5m11bU2yIz+62ZHTCz\n/Wb279nySt+7RF+VvG9dP+03s1mS/ijpKkljkl6VdKO7H+hqI02Y2WFJA+5e+ZiwmX1V0l8lPXp6\nNiQz+09JJ9393uw/znPd/Xs16W2LznDm5pJ6azaz9DdV4XvXyRmvO6GKI/8lkg66+yF3/5ukn0la\nU0EftefuL0o6+anFayTtzB7vVOMfT9c16a0W3P2ou+/LHn8g6fTM0pW+d4m+KlFF+M+X9Kdpz8dU\nrym/XdKvzew1MxuqupkZ9E2bGemYpL4qm5lB7szN3fSpmaVr8961M+N1p/GB32etdPd/lvRvkjZk\np7e15I1rtjoN12yTtEyNadyOSvphlc1kM0s/Jem77n5qeq3K926Gvip536oI/7ikRdOefylbVgvu\nPp79PiHpGTUuU+rk+OlJUrPfJyru5+/c/bi7T7r7lKQfq8L3LptZ+ilJP3X3p7PFlb93M/VV1ftW\nRfhflXSBmS01s7mS1knaVUEfn2Fm87IPYmRm8yR9XfWbfXiXpMHs8aCkZyvs5RPqMnNzs5mlVfF7\nV7sZr9296z+SrlXjE///lfT9Knpo0tc/SXoj+9lfdW+SnlDjNPBjNT4b+bakf5C0W9KopBckLaxR\nb4+pMZvzm2oErb+i3laqcUr/pqTXs59rq37vEn1V8r5xhx8QFB/4AUERfiAowg8ERfiBoAg/EBTh\nB4Ii/EBQhB8I6v8A+Md7QMI5IyUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x117b91d30>"
+       "<matplotlib.figure.Figure at 0x11ef2ada0>"
       ]
      },
      "metadata": {},
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -278,53 +278,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SimpleLogisticClassification(object):\n",
-    "    def __init__(self,n_features,n_labels):\n",
+    "    def __init__(self,n_features,n_labels,learning_rate=0.5):\n",
     "        self.n_features = n_features\n",
     "        self.n_labels = n_labels\n",
     "        self.graph = tf.Graph()\n",
-    "        self.sess  = None\n",
-    "    \n",
-    "    def bulid(self,learning_rate):\n",
+    "        self.build(learning_rate)\n",
+    "        self.sess = tf.Session(graph=self.graph)\n",
+    "        \n",
+    "    def build(self,learning_rate):\n",
     "        with self.graph.as_default():\n",
     "            # Input\n",
-    "            self.train_set = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
-    "            self.train_lab = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
+    "            self.features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
+    "            self.labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
     "            \n",
-    "            # Variables\n",
+    "            # Computation\n",
     "            self.W1 = tf.Variable(\n",
     "                    tf.truncated_normal( shape=(self.n_features, self.n_labels) ))\n",
     "            self.b1 = tf.Variable(tf.zeros( shape=(self.n_labels) ))\n",
-    "            \n",
-    "            # Computation\n",
-    "            self.logits = tf.matmul(self.train_set,self.W1)+self.b1\n",
-    "            self.y = tf.nn.softmax(self.logits)\n",
-    "            self.loss = tf.reduce_mean(\n",
-    "                            tf.nn.softmax_cross_entropy_with_logits(labels=self.train_lab, logits=self.logits))\n",
-    "\n",
+    "            self.s1 = tf.matmul(self.features,self.W1)+self.b1\n",
+    "    \n",
+    "            self.y = tf.nn.softmax(self.s1)\n",
     "            \n",
     "            # Optimalization\n",
+    "            self.loss = tf.reduce_mean(\n",
+    "                            tf.nn.softmax_cross_entropy_with_logits(labels=self.labels, logits=self.s1))\n",
+    "            self.init_op = tf.global_variables_initializer()\n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
     "            \n",
-    "            # Prediction\n",
-    "            self.new_set = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
-    "            self.new_lab = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
-    "            \n",
-    "            self.new_logits = tf.matmul(self.new_set,self.W1)+self.b1\n",
-    "            self.new_y = tf.nn.softmax(self.new_logits)\n",
-    "            self.new_loss = tf.reduce_mean(\n",
-    "                                tf.nn.softmax_cross_entropy_with_logits(labels=self.new_lab, logits=self.new_logits))\n",
     "    \n",
-    "    def fit(self,X,y,learning_rate=0.5,epochs=10,validation_data=None,test_data=None):\n",
-    "        self.build(learning_rate)\n",
-    "        self.sess = tf.InteractiveSession(graph=self.graph)\n",
-    "        self.sess.run(tf.global_variables_initializer())\n",
+    "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None):\n",
+    "        self.sess.run(self.init_op)\n",
     "        for epoch in range(epochs):\n",
-    "            feed_dict = {self.train_set: X, self.train_lab: y}\n",
+    "            feed_dict = {self.features: X, self.labels: y}\n",
     "            _, loss, predictions = self.sess.run([self.train_op, self.loss, self.y], feed_dict=feed_dict)\n",
     "            acc = self.accuracy(predictions,y)\n",
     "            print(\"Epoch %3d/%3d: \"%(epoch+1,epochs), end='')\n",
@@ -345,10 +335,10 @@
     "        return (np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))/predictions.shape[0])\n",
     "    \n",
     "    def predict(self,X):\n",
-    "        return self.sess.run(self.new_y, feed_dict={self.new_set: X})\n",
+    "        return self.sess.run(self.y, feed_dict={self.features: X})\n",
     "    \n",
     "    def evaluate(self,X,y):\n",
-    "        return self.sess.run(self.new_loss, feed_dict={self.new_set: X, self.new_lab: y})"
+    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y})"
    ]
   },
   {
@@ -362,32 +352,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   1/ 10:  loss =   13.2638, acc = 9.90%, val_loss =   11.1620, val_acc = 9.16%\n",
-      "Epoch   2/ 10:  loss =   11.0633, acc = 9.76%, val_loss =    9.9242, val_acc = 10.90%\n",
-      "Epoch   3/ 10:  loss =    9.8378, acc = 11.48%, val_loss =    8.9855, val_acc = 12.80%\n",
-      "Epoch   4/ 10:  loss =    8.9214, acc = 13.29%, val_loss =    8.2047, val_acc = 14.78%\n",
-      "Epoch   5/ 10:  loss =    8.1643, acc = 15.21%, val_loss =    7.5437, val_acc = 17.18%\n",
-      "Epoch   6/ 10:  loss =    7.5244, acc = 17.35%, val_loss =    6.9821, val_acc = 19.44%\n",
-      "Epoch   7/ 10:  loss =    6.9804, acc = 19.69%, val_loss =    6.4996, val_acc = 21.72%\n",
-      "Epoch   8/ 10:  loss =    6.5120, acc = 22.21%, val_loss =    6.0776, val_acc = 23.78%\n",
-      "Epoch   9/ 10:  loss =    6.1010, acc = 24.54%, val_loss =    5.7026, val_acc = 25.82%\n",
-      "Epoch  10/ 10:  loss =    5.7348, acc = 26.68%, val_loss =    5.3658, val_acc = 27.88%\n",
-      "test_acc = 29.18%\n"
+      "Epoch   1/ 10:  loss =   12.0891, acc = 6.77%, val_loss =   10.5730, val_acc = 8.46%\n",
+      "Epoch   2/ 10:  loss =   10.5682, acc = 8.61%, val_loss =    9.5626, val_acc = 10.30%\n",
+      "Epoch   3/ 10:  loss =    9.5343, acc = 10.28%, val_loss =    8.7660, val_acc = 12.06%\n",
+      "Epoch   4/ 10:  loss =    8.7267, acc = 12.00%, val_loss =    8.0923, val_acc = 13.40%\n",
+      "Epoch   5/ 10:  loss =    8.0519, acc = 13.64%, val_loss =    7.4929, val_acc = 15.20%\n",
+      "Epoch   6/ 10:  loss =    7.4566, acc = 15.35%, val_loss =    6.9474, val_acc = 16.88%\n",
+      "Epoch   7/ 10:  loss =    6.9170, acc = 17.03%, val_loss =    6.4482, val_acc = 18.42%\n",
+      "Epoch   8/ 10:  loss =    6.4242, acc = 18.86%, val_loss =    5.9916, val_acc = 20.14%\n",
+      "Epoch   9/ 10:  loss =    5.9741, acc = 20.70%, val_loss =    5.5757, val_acc = 22.22%\n",
+      "Epoch  10/ 10:  loss =    5.5646, acc = 22.58%, val_loss =    5.1993, val_acc = 24.92%\n",
+      "test_acc = 25.85%\n"
      ]
     }
    ],
    "source": [
-    "model = SimpleLogisticClassification(n_features=28*28,n_labels=10)\n",
+    "model = SimpleLogisticClassification(n_features=28*28,\n",
+    "                                     n_labels=10,\n",
+    "                                     learning_rate= 0.5,)\n",
     "model.fit(X=train_data.images,\n",
     "          y=train_data.labels,\n",
-    "          learning_rate= 0.5,\n",
     "          epochs=10,\n",
     "          validation_data=(valid_data.images,valid_data.labels),\n",
     "          test_data=(test_data.images,test_data.labels), )"
