--- a/tutorial/02_Build_First_DNN.ipynb
+++ b/tutorial/02_Build_First_DNN.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,37 +66,54 @@
     "        \n",
     "    def build(self,learning_rate,n_hidden,dropout_ratio,alpha):\n",
     "        with self.graph.as_default():\n",
-    "            # Input\n",
+    "            ### Input\n",
     "            self.features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
     "            self.labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
+    "            self.keep_prob= tf.placeholder(tf.float32)\n",
+    "            self.train_keep_prob = 1-dropout_ratio\n",
     "            \n",
-    "            # Computation\n",
-    "            self.W1, self.b1, self.s1 = self.getDenseLayer(self.features,n_hidden)\n",
-    "            self.drop_s1 = tf.nn.dropout(self.s1, keep_prob=(1-dropout_ratio))\n",
-    "            self.x2 = tf.nn.relu(self.drop_s1)\n",
-    "            self.W2, self.b2, self.s2 = self.getDenseLayer(self.x2,self.n_labels)\n",
-    "    \n",
-    "            self.y = tf.nn.softmax(self.s2)\n",
+    "            ### Computation\n",
+    "            self.Weights = {}\n",
+    "            self.Biases  = {} \n",
+    "            self.Scores  = {}\n",
+    "            self.Xs      = {}\n",
     "            \n",
-    "            # Optimalization\n",
+    "            self.Weights['fc1'], self.Biases['fc1'], self.Scores['fc1'], self.Xs['fc1'] \\\n",
+    "                      = self.getDenseLayer(self.features, n_hidden, activation=tf.nn.relu)\n",
+    "            \n",
+    "            self.drop_x2 = tf.nn.dropout(self.Xs['fc1'], keep_prob=self.keep_prob)\n",
+    "            \n",
+    "            self.Weights['fc2'], self.Biases['fc2'], self.Scores['fc2'], self.Xs['fc2'] \\\n",
+    "                      = self.getDenseLayer(self.drop_x2, self.n_labels, activation=tf.nn.softmax)\n",
+    "                \n",
+    "            self.logits = self.Scores['fc2']\n",
+    "            self.y_ = self.Xs['fc2'] \n",
+    "            \n",
+    "            \n",
+    "            ### Optimalization\n",
     "            self.original_loss = tf.reduce_mean(\n",
-    "                            tf.nn.softmax_cross_entropy_with_logits(labels=self.labels, logits=self.s2))\n",
-    "            self.regularization = tf.nn.l2_loss(self.W1) + tf.nn.l2_loss(self.W2)\n",
+    "                            tf.nn.softmax_cross_entropy_with_logits(labels=self.labels,logits=self.logits))\n",
+    "            self.regularization = tf.reduce_mean(\n",
+    "                                   [tf.nn.l2_loss(w)/tf.cast(tf.shape(w)[0]*tf.shape(w)[1],tf.float32)\n",
+    "                                        for k,w in self.Weights.items()])\n",
     "            self.loss = self.original_loss + alpha * self.regularization\n",
     "            \n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
     "            \n",
-    "            # Initialization\n",
+    "            ### Initialization\n",
     "            self.init_op = tf.global_variables_initializer()\n",
     "            \n",
-    "    def getDenseLayer(self,input_layer,n_output):\n",
-    "        with self.graph.as_default():\n",
-    "            n_input = int(input_layer.shape[1])\n",
-    "            W = tf.Variable(\n",
+    "    def getDenseLayer(self,input_layer,n_output,activation=None):\n",
+    "        n_input = int(input_layer.shape[1])\n",
+    "        W = tf.Variable(\n",
     "                    tf.truncated_normal( shape=(n_input,n_output) ))\n",
-    "            b = tf.Variable(tf.zeros( shape=(n_output) ))\n",
-    "            s = tf.matmul(input_layer,W)+b\n",
-    "        return (W,b,s)\n",
+    "        b = tf.Variable(tf.zeros( shape=(n_output) ))\n",
+    "        s = tf.add(tf.matmul(input_layer,W),b)\n",
+    "        if activation:\n",
+    "            x_new = activation(s)\n",
+    "        else:\n",
+    "            x_new = None\n",
+    "        return (W,b,s,x_new)\n",
     "    \n",
     "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None,batch_size=None):\n",
     "        N = X.shape[0]\n",
@@ -112,22 +129,26 @@
     "            while k < N:\n",
     "                batch_index = [i for i in range(k,min(k+batch_size,N))]    \n",
     "            \n",
-    "                feed_dict = {self.features: X[batch_index,:], self.labels: y[batch_index]}\n",
-    "                _, loss, predictions = self.sess.run([self.train_op, self.loss, self.y], feed_dict=feed_dict)\n",
+    "                feed_dict = {self.features: X[batch_index,:], \n",
+    "                             self.labels: y[batch_index], \n",
+    "                             self.keep_prob: self.train_keep_prob,}\n",
+    "                _, loss = self.sess.run([self.train_op, self.loss], feed_dict=feed_dict)\n",
     "                \n",
     "                print(\"[%d/%d] loss = %9.4f                      \" % ( k, N, loss ), end='\\r')\n",
     "                \n",
     "                k += batch_size\n",
     "            \n",
-    "            msg_valid = \"\"\n",
+    "            y_ = self.predict(X)\n",
+    "            train_loss = self.evaluate(X,y)\n",
+    "            train_acc = self.accuracy(y_,y)\n",
+    "            msg = \"[%d/%d] loss = %8.4f, acc = %3.2f%%\" % ( N, N, train_loss, train_acc*100 )\n",
+    "            \n",
     "            if validation_data:\n",
     "                val_loss = self.evaluate(validation_data[0],validation_data[1])\n",
     "                val_acc = self.accuracy(self.predict(validation_data[0]),validation_data[1])\n",
-    "                msg_valid = \", val_loss = %9.4f, val_acc = %3.2f%%\" % ( val_loss,val_acc*100 )\n",
+    "                msg += \", val_loss = %8.4f, val_acc = %3.2f%%\" % ( val_loss, val_acc*100 )\n",
     "            \n",
-    "            train_loss = self.evaluate(X,y)\n",
-    "            train_acc = self.accuracy(self.predict(X),y)\n",
-    "            print(\"[%d/%d] loss = %9.4f, acc = %3.2f%% %s\" % ( N, N, train_loss, train_acc*100, msg_valid ))\n",
+    "            print(msg)\n",
     "            \n",
     "            \n",
     "        if test_data:\n",
@@ -138,45 +159,78 @@
     "        return (np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))/predictions.shape[0])\n",
     "    \n",
     "    def predict(self,X):\n",
-    "        return self.sess.run(self.y, feed_dict={self.features: X})\n",
+    "        return self.sess.run(self.y_, feed_dict={self.features: X, self.keep_prob: 1.0})\n",
     "    \n",
     "    def evaluate(self,X,y):\n",
-    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y})\n"
+    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y, self.keep_prob: 1.0})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1/ 5: \n",
-      "[55000/55000] loss =  201.0457, acc = 85.26% , val_loss =  201.1630, val_acc = 85.98%\n",
-      "Epoch  2/ 5: \n",
-      "[55000/55000] loss =  130.4622, acc = 88.39% , val_loss =  130.5526, val_acc = 88.16%\n",
-      "Epoch  3/ 5: \n",
-      "[55000/55000] loss =   84.7895, acc = 91.08% , val_loss =   84.8732, val_acc = 90.08%\n",
-      "Epoch  4/ 5: \n",
-      "[55000/55000] loss =   55.1698, acc = 93.08% , val_loss =   55.2244, val_acc = 92.46%\n",
-      "Epoch  5/ 5: \n",
-      "[55000/55000] loss =   35.9403, acc = 93.73% , val_loss =   35.9862, val_acc = 92.70%\n",
-      "test_acc = 92.89%\n"
+      "Epoch  1/ 3: \n",
+      "[55000/55000] loss =   0.9960, acc = 95.57%, val_loss =   1.7792, val_acc = 94.54%\n",
+      "Epoch  2/ 3: \n",
+      "[55000/55000] loss =   0.3474, acc = 97.55%, val_loss =   1.3377, val_acc = 95.24%\n",
+      "Epoch  3/ 3: \n",
+      "[55000/55000] loss =   0.1115, acc = 98.77%, val_loss =   1.1443, val_acc = 95.66%\n",
+      "test_acc = 94.94%\n"
      ]
     }
    ],
    "source": [
     "model = DNNLogisticClassification(   n_features=28*28,\n",
     "                                     n_labels=10,\n",
-    "                                     learning_rate= 0.5,\n",
-    "                                     n_hidden=1000,\n",
-    "                                     alpha=0.001,\n",
+    "                                     learning_rate=0.5,\n",
+    "                                     n_hidden=3000,\n",
+    "                                     dropout_ratio=0.0,\n",
+    "                                     alpha=0.01,\n",
     "                                 )\n",
     "model.fit(X=train_data.images,\n",
     "          y=train_data.labels,\n",
-    "          epochs=5,\n",
+    "          epochs=3,\n",
+    "          validation_data=(valid_data.images,valid_data.labels),\n",
+    "          test_data=(test_data.images,test_data.labels),\n",
+    "          batch_size = 128,\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch  1/ 3: \n",
+      "[55000/55000] loss =   1.3701, acc = 96.03%, val_loss =   1.9417, val_acc = 95.62%\n",
+      "Epoch  2/ 3: \n",
+      "[55000/55000] loss =   0.5220, acc = 97.48%, val_loss =   1.1979, val_acc = 96.18%\n",
+      "Epoch  3/ 3: \n",
+      "[55000/55000] loss =   0.2798, acc = 98.00%, val_loss =   0.9924, val_acc = 96.50%\n",
+      "test_acc = 96.04%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DNNLogisticClassification(   n_features=28*28,\n",
+    "                                     n_labels=10,\n",
+    "                                     learning_rate=0.5,\n",
+    "                                     n_hidden=3000,\n",
+    "                                     dropout_ratio=0.5,\n",
+    "                                     alpha=0.01,\n",
+    "                                 )\n",
+    "model.fit(X=train_data.images,\n",
+    "          y=train_data.labels,\n",
+    "          epochs=3,\n",
     "          validation_data=(valid_data.images,valid_data.labels),\n",
     "          test_data=(test_data.images,test_data.labels),\n",
     "          batch_size = 128,\n",
