--- a/tutorial/02_Build_First_DNN.ipynb
+++ b/tutorial/02_Build_First_DNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,16 @@
     "            self.Scores  = {}\n",
     "            self.Xs      = {}\n",
     "            \n",
-    "            self.Weights['fc1'], self.Biases['fc1'], self.Scores['fc1'], self.Xs['fc1'] \\\n",
+    "            self.Weights['fc1'], self.Biases['fc1'], self.Scores['fc1'], self.Xs['fc2'] \\\n",
     "                      = self.getDenseLayer(self.features, n_hidden, activation=tf.nn.relu)\n",
     "            \n",
-    "            self.drop_x2 = tf.nn.dropout(self.Xs['fc1'], keep_prob=self.keep_prob)\n",
+    "            self.drop_x2 = tf.nn.dropout(self.Xs['fc2'], keep_prob=self.keep_prob)\n",
     "            \n",
-    "            self.Weights['fc2'], self.Biases['fc2'], self.Scores['fc2'], self.Xs['fc2'] \\\n",
+    "            self.Weights['fc2'], self.Biases['fc2'], self.Scores['fc2'], self.Xs['fc3'] \\\n",
     "                      = self.getDenseLayer(self.drop_x2, self.n_labels, activation=tf.nn.softmax)\n",
     "                \n",
     "            self.logits = self.Scores['fc2']\n",
-    "            self.y_ = self.Xs['fc2'] \n",
+    "            self.y_ = self.Xs['fc3'] \n",
     "            \n",
     "            \n",
     "            ### Optimalization\n",
@@ -116,6 +116,9 @@
     "        return (W,b,s,x_new)\n",
     "    \n",
     "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None,batch_size=None):\n",
+    "        X = self._check_array(X)\n",
+    "        y = self._check_array(y)\n",
+    "        \n",
     "        N = X.shape[0]\n",
     "        random.seed(9000)\n",
     "        if not batch_size: batch_size=N\n",
@@ -123,21 +126,23 @@
     "        self.sess.run(self.init_op)\n",
     "        for epoch in range(epochs):\n",
     "            print(\"Epoch %2d/%2d: \"%(epoch+1,epochs))\n",
-    "            index = random.shuffle([i for i in range(N)])\n",
-    "\n",
-    "            k = 0\n",
-    "            while k < N:\n",
-    "                batch_index = [i for i in range(k,min(k+batch_size,N))]    \n",
+    "            \n",
+    "            # batch gradient descent\n",
+    "            index = [i for i in range(N)]\n",
+    "            random.shuffle(index)\n",
+    "            while len(index)>0:\n",
+    "                index_size = len(index)\n",
+    "                batch_index = [index.pop() for _ in range(min(batch_size,index_size))]    \n",
     "            \n",
     "                feed_dict = {self.features: X[batch_index,:], \n",
     "                             self.labels: y[batch_index], \n",
     "                             self.keep_prob: self.train_keep_prob,}\n",
     "                _, loss = self.sess.run([self.train_op, self.loss], feed_dict=feed_dict)\n",
     "                \n",
-    "                print(\"[%d/%d] loss = %9.4f                      \" % ( k, N, loss ), end='\\r')\n",
-    "                \n",
-    "                k += batch_size\n",
+    "                print(\"[%d/%d] loss = %9.4f                      \" % ( N-len(index), N, loss ), end='\\r')\n",
+    "\n",
     "            \n",
+    "            # evaluate at the end of this epoch\n",
     "            y_ = self.predict(X)\n",
     "            train_loss = self.evaluate(X,y)\n",
     "            train_acc = self.accuracy(y_,y)\n",
@@ -159,15 +164,24 @@
     "        return (np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))/predictions.shape[0])\n",
     "    \n",
     "    def predict(self,X):\n",
+    "        X = self._check_array(X)\n",
     "        return self.sess.run(self.y_, feed_dict={self.features: X, self.keep_prob: 1.0})\n",
     "    \n",
     "    def evaluate(self,X,y):\n",
-    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y, self.keep_prob: 1.0})\n"
+    "        X = self._check_array(X)\n",
+    "        y = self._check_array(y)\n",
+    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y, self.keep_prob: 1.0})\n",
+    "    \n",
+    "    def _check_array(self,ndarray):\n",
+    "        ndarray = np.array(ndarray)\n",
+    "        if len(ndarray.shape)==1: ndarray = np.reshape(ndarray,(1,ndarray.shape[0]))\n",
+    "        return ndarray\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -175,12 +189,12 @@
      "output_type": "stream",
      "text": [
       "Epoch  1/ 3: \n",
-      "[55000/55000] loss =   0.9960, acc = 95.57%, val_loss =   1.7792, val_acc = 94.54%\n",
+      "[55000/55000] loss =   0.8011, acc = 96.23%, val_loss =   1.6169, val_acc = 94.84%\n",
       "Epoch  2/ 3: \n",
-      "[55000/55000] loss =   0.3474, acc = 97.55%, val_loss =   1.3377, val_acc = 95.24%\n",
+      "[55000/55000] loss =   0.2549, acc = 97.98%, val_loss =   1.2975, val_acc = 95.64%\n",
       "Epoch  3/ 3: \n",
-      "[55000/55000] loss =   0.1115, acc = 98.77%, val_loss =   1.1443, val_acc = 95.66%\n",
-      "test_acc = 94.94%\n"
+      "[55000/55000] loss =   0.0973, acc = 98.93%, val_loss =   1.2251, val_acc = 96.04%\n",
+      "test_acc = 95.21%\n"
      ]
     }
    ],
@@ -203,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -211,12 +225,12 @@
      "output_type": "stream",
      "text": [
       "Epoch  1/ 3: \n",
-      "[55000/55000] loss =   1.3701, acc = 96.03%, val_loss =   1.9417, val_acc = 95.62%\n",
+      "[55000/55000] loss =   1.2080, acc = 96.22%, val_loss =   2.2227, val_acc = 95.66%\n",
       "Epoch  2/ 3: \n",
-      "[55000/55000] loss =   0.5220, acc = 97.48%, val_loss =   1.1979, val_acc = 96.18%\n",
+      "[55000/55000] loss =   0.4732, acc = 97.53%, val_loss =   1.1690, val_acc = 96.36%\n",
       "Epoch  3/ 3: \n",
-      "[55000/55000] loss =   0.2798, acc = 98.00%, val_loss =   0.9924, val_acc = 96.50%\n",
-      "test_acc = 96.04%\n"
+      "[55000/55000] loss =   0.2847, acc = 97.99%, val_loss =   0.9830, val_acc = 96.46%\n",
+      "test_acc = 96.36%\n"
      ]
     }
    ],
