--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -329,12 +329,18 @@
     "        return (W,b,s,x_new)\n",
     "    \n",
     "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None):\n",
+    "        X = self._check_array(X)\n",
+    "        y = self._check_array(y)\n",
+    "        \n",
     "        self.sess.run(self.init_op)\n",
     "        for epoch in range(epochs):\n",
     "            print(\"Epoch %2d/%2d: \"%(epoch+1,epochs))\n",
+    "            \n",
+    "            # batch gradient descent\n",
     "            feed_dict = {self.features: X, self.labels: y}\n",
     "            _ = self.sess.run(self.train_op, feed_dict=feed_dict)\n",
     "            \n",
+    "            # evaluate at the end of this epoch\n",
     "            y_ = self.predict(X)\n",
     "            train_loss = self.evaluate(X,y)\n",
     "            train_acc = self.accuracy(y_,y)\n",
@@ -355,10 +361,19 @@
     "        return (np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))/predictions.shape[0])\n",
     "    \n",
     "    def predict(self,X):\n",
-    "        return self.sess.run(self.y_, feed_dict={self.features: X})\n",
+    "        X = self._check_array(X)\n",
+    "        return self.sess.run(self.y_, feed_dict={self.features: X, self.keep_prob: 1.0})\n",
     "    \n",
     "    def evaluate(self,X,y):\n",
-    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y})"
+    "        X = self._check_array(X)\n",
+    "        y = self._check_array(y)\n",
+    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y, self.keep_prob: 1.0})\n",
+    "    \n",
+    "    def _check_array(self,ndarray):\n",
+    "        ndarray = np.array(ndarray)\n",
+    "        if len(ndarray.shape)==1: ndarray = np.reshape(ndarray,(1,ndarray.shape[0]))\n",
+    "        return ndarray\n",
+    "    "
    ]
   },
   {
