--- a/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
+++ b/tutorial/01_Simple_Logistic_Classification_on_MNIST.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADclJREFUeJzt3X+IXfWZx/HPY36AJBHMlg6jTTbZIMGaP+wy6IqxdDFW\nVwJJQSWiMKWlEyHCFldtTJEEiiCLreYfE6cYG7Vru6JiLNIfhlJT0WIM/krc6WRDYmfIj0qKsfpH\nnZln/7gn3VHnfs/NPffcc67P+wXD3Huee855uOSTc879njtfc3cBiOesqhsAUA3CDwRF+IGgCD8Q\nFOEHgiL8QFCEHwiK8ANBEX4gqNnd3JmZcTshUDJ3t1ZeV+jIb2bXmNmImR00s41FtgWgu6zde/vN\nbJakP0q6StKYpFcl3ejuBxLrcOQHStaNI/8lkg66+yF3/5ukn0laU2B7ALqoSPjPl/Snac/HsmWf\nYGZDZrbXzPYW2BeADiv9Az93H5Y0LHHaD9RJkSP/uKRF055/KVsGoAcUCf+rki4ws6VmNlfSOkm7\nOtMWgLK1fdrv7hNmdqukX0maJWmHu+/vWGcAStX2UF9bO+OaHyhdV27yAdC7CD8QFOEHgiL8QFCE\nHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQ\nhB8IivADQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiq7Sm6JcnMDkv6QNKkpAl3H+hEU/gks/Sk\nq+vWrWta27x5c3Ld5cuXt9VTJ4yMjCTrV155ZbJ+/PjxZH1iYuKMe4qkUPgz/+ru73VgOwC6iNN+\nIKii4XdJvzaz18xsqBMNAeiOoqf9K9193My+KOk3ZvY/7v7i9Bdk/ynwHwNQM4WO/O4+nv0+IekZ\nSZfM8Jphdx/gw0CgXtoOv5nNM7MFpx9L+rqktzvVGIByFTnt75P0TDYMNVvSf7n7LzvSFYDSmbt3\nb2dm3dtZDznrrPQJ2IYNG5L1rVu3tr3vqampZP2jjz5K1mfNmpWsn3322WfcU6v279+frK9atapp\nLe8egV7m7ukbQzIM9QFBEX4gKMIPBEX4gaAIPxAU4QeCYqivBoaG0nc/b9++ve1tT05OJutbtmxJ\n1u+5555kffHixcn6HXfc0bR2yy23JNfNG0bMkxoKvPzyy5Prnjp1qtC+q8RQH4Akwg8ERfiBoAg/\nEBThB4Ii/EBQhB8IinH+Lsgbr37ssceS9dSf5s6TN05/9913t73toq6//vpk/YEHHkjW+/v72973\neeedl6wfO3as7W1XjXF+AEmEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4/xdkDcePT4+Xmj7qe+tr169\nOrnukSNHCu27TC+99FKyftlll7W9bcb5OfIDYRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCz815gZjsk\nrZZ0wt1XZMsWSvq5pCWSDku6wd3/Ul6bvW3t2rWF1v/444+T9TvvvLNprc7j+HluuummZP3ll19O\n1vv6+prWBgcHk+ved999yXrefAi9oJUj/08kXfOpZRsl7Xb3CyTtzp4D6CG54Xf3FyWd/NTiNZJ2\nZo93Sip2aAPQde1e8/e5+9Hs8TFJzc+vANRS7jV/Hnf31D37ZjYkKT0ZHYCua/fIf9zM+iUp+32i\n2QvdfdjdB9x9oM19AShBu+HfJen0x6WDkp7tTDsAuiU3/Gb2hKSXJS03szEz+7akeyVdZWajklZl\nzwH0EL7P3wELFixI1vft25esL1u2LFkfHR1N1pcvX56sf17de2/6mJO6/yHPhRdemKyPjIy0ve2y\n8X1+AEmEHwiK8ANBEX4gKMIPBEX4gaAK394Lae7cucl63lAe2nPgwIHStr1+/fpk/bbbbitt393C\nkR8IivADQRF+ICjCDwRF+IGgCD8QFOEHgmKcvwcUncIbmAlHfiAowg8ERfiBoAg/EBThB4Ii/EBQ\nhB8IinH+Drj55ptL3f4jjzxS6vYRE0d+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwgqd5zfzHZIWi3p\nhLuvyJZtkfQdSX/OXrbJ3Z8vq8m6W7p0adUtAGeslSP/TyRdM8Py+9394uwnbPCBXpUbfnd/UdLJ\nLvQCoIuKXPPfamZvmtkOMzu3Yx0B6Ip2w79N0jJJF0s6KumHzV5oZkNmttfM9ra5LwAlaCv87n7c\n3SfdfUrSjyVdknjtsLsPuPtAu00C6Ly2wm9m/dOefkPS251pB0C3tDLU94Skr0n6gpmNSdos6Wtm\ndrEkl3RYUno+YwC1kxt+d79xhsUPl9ALgC7iDj8gKMIPBEX4gaAIPxAU4QeCIvxAUPzp7hr48MMP\nk/V33323S53gtJGRkapbKB1HfiAowg8ERfiBoAg/EBThB4Ii/EBQhB8IinH+Gpg7d26yfs4553Sp\nk3pZvHhxsn777beXtu8nn3yytG3XBUd+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiKcf4OeOONNwqt\nP2fOnGR906ZNyfpzzz1XaP919fjjjyfrK1asaHvbGzduTNbff//9trfdKzjyA0ERfiAowg8ERfiB\noAg/EBThB4Ii/EBQueP8ZrZI0qOS+iS5pGF332pmCyX9XNISSYcl3eDufymv1fratWtXqdtfuHBh\nqduvyl133ZWsX3rppYW2n/rb+w899FBy3cnJyUL77gWtHPknJP2Hu39Z0r9I2mBmX5a0UdJud79A\n0u7sOYAekRt+dz/q7vuyxx9IekfS+ZLWSNqZvWynpLVlNQmg887omt/Mlkj6iqQ/SOpz96NZ6Zga\nlwUAekTL9/ab2XxJT0n6rrufMrO/19zdzcybrDckaahoowA6q6Ujv5nNUSP4P3X3p7PFx82sP6v3\nSzox07ruPuzuA+4+0ImGAXRGbvitcYh/WNI77v6jaaVdkgazx4OSnu18ewDKYu4znq3//wvMVkra\nI+ktSVPZ4k1qXPf/t6TFko6oMdR3Mmdb6Z31qHnz5iXrr7zySrJ+0UUXJet5w07bt29vWrv//vuT\n6x46dChZL2rVqlVNa88//3xy3dmz01eledNoX3311U1rn+dpz93d8l/VwjW/u/9eUrONXXkmTQGo\nD+7wA4Ii/EBQhB8IivADQRF+ICjCDwSVO87f0Z19Tsf58/T1pb/28MILLyTrefcBpBw8eDBZf/DB\nB9vetiQNDg4m68uWLWtamz9/fqF9b9iwIVnftm1boe33qlbH+TnyA0ERfiAowg8ERfiBoAg/EBTh\nB4Ii/EBQjPPXwHXXXZesb968OVkvch9AlUZHR5P11Pfxpfzv5E9NTSXrn1eM8wNIIvxAUIQfCIrw\nA0ERfiAowg8ERfiBoBjn7wF5f78+9fcC1q9fn1z3iiuuSNb37NmTrOfZsWNH09rY2Fhy3YmJiUL7\njopxfgBJhB8IivADQRF+ICjCDwRF+IGgCD8QVO44v5ktkvSopD5JLmnY3bea2RZJ35H05+ylm9w9\nOeE64/xA+Vod528l/P2S+t19n5ktkPSapLWSbpD0V3e/r9WmCD9QvlbDn751rLGho5KOZo8/MLN3\nJJ1frD0AVTuja34zWyLpK5L+kC261czeNLMdZnZuk3WGzGyvme0t1CmAjmr53n4zmy/pd5Lucfen\nzaxP0ntqfA7wAzUuDb6Vsw1O+4GSdeyaX5LMbI6kX0j6lbv/aIb6Ekm/cPcVOdsh/EDJOvbFHjMz\nSQ9Lemd68LMPAk/7hqS3z7RJANVp5dP+lZL2SHpL0um/hbxJ0o2SLlbjtP+wpPXZh4OpbXHkB0rW\n0dP+TiH8QPn4Pj+AJMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii\n/EBQuX/As8Pek3Rk2vMvZMvqqK691bUvid7a1cne/rHVF3b1+/yf2bnZXncfqKyBhLr2Vte+JHpr\nV1W9cdoPBEX4gaCqDv9wxftPqWtvde1Lord2VdJbpdf8AKpT9ZEfQEUqCb+ZXWNmI2Z20Mw2VtFD\nM2Z22MzeMrPXq55iLJsG7YSZvT1t2UIz+42ZjWa/Z5wmraLetpjZePbevW5m11bU2yIz+62ZHTCz\n/Wb279nySt+7RF+VvG9dP+03s1mS/ijpKkljkl6VdKO7H+hqI02Y2WFJA+5e+ZiwmX1V0l8lPXp6\nNiQz+09JJ9393uw/znPd/Xs16W2LznDm5pJ6azaz9DdV4XvXyRmvO6GKI/8lkg66+yF3/5ukn0la\nU0EftefuL0o6+anFayTtzB7vVOMfT9c16a0W3P2ou+/LHn8g6fTM0pW+d4m+KlFF+M+X9Kdpz8dU\nrym/XdKvzew1MxuqupkZ9E2bGemYpL4qm5lB7szN3fSpmaVr8961M+N1p/GB32etdPd/lvRvkjZk\np7e15I1rtjoN12yTtEyNadyOSvphlc1kM0s/Jem77n5qeq3K926Gvip536oI/7ikRdOefylbVgvu\nPp79PiHpGTUuU+rk+OlJUrPfJyru5+/c/bi7T7r7lKQfq8L3LptZ+ilJP3X3p7PFlb93M/VV1ftW\nRfhflXSBmS01s7mS1knaVUEfn2Fm87IPYmRm8yR9XfWbfXiXpMHs8aCkZyvs5RPqMnNzs5mlVfF7\nV7sZr9296z+SrlXjE///lfT9Knpo0tc/SXoj+9lfdW+SnlDjNPBjNT4b+bakf5C0W9KopBckLaxR\nb4+pMZvzm2oErb+i3laqcUr/pqTXs59rq37vEn1V8r5xhx8QFB/4AUERfiAowg8ERfiBoAg/EBTh\nB4Ii/EBQhB8I6v8A+Md7QMI5IyUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11ef2ada0>"
+       "<matplotlib.figure.Figure at 0x11ddf3dd8>"
       ]
      },
      "metadata": {},
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,40 +293,46 @@
     "    def build(self,learning_rate):\n",
     "        with self.graph.as_default():\n",
     "            ### Input\n",
-    "            self.features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
-    "            self.labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
+    "            self.train_features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
+    "            self.train_labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
     "            \n",
-    "            ### Computation\n",
-    "            self.Weights = {}\n",
-    "            self.Biases  = {} \n",
-    "            self.Scores  = {}\n",
-    "            self.Xs      = {}\n",
-    "            \n",
-    "            self.Weights['fc1'], self.Biases['fc1'], self.Scores['fc1'], self.Xs['fc1'] \\\n",
-    "                      = self.getDenseLayer(self.features, self.n_labels, activation=tf.nn.softmax)\n",
-    "            self.logits = self.Scores['fc1']\n",
-    "            self.y_ = self.Xs['fc1'] \n",
+    "            ### Variable\n",
+    "            self.weights = {\n",
+    "                'fc1': tf.Variable(tf.truncated_normal( shape=(self.n_features,self.n_labels) )),\n",
+    "            }\n",
+    "            self.biases  = {\n",
+    "                'fc1': tf.Variable(tf.zeros( shape=(self.n_labels) )),\n",
+    "            } \n",
     "            \n",
     "            ### Optimalization\n",
-    "            self.loss = tf.reduce_mean(\n",
-    "                            tf.nn.softmax_cross_entropy_with_logits(labels=self.labels,logits=self.logits))\n",
+    "            self.y_,self.loss = self.structure(features=self.train_features,\n",
+    "                                                        labels=self.train_labels)\n",
     "            \n",
     "            self.train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(self.loss)\n",
+    "            \n",
+    "            ### Prediction\n",
+    "            self.new_features = tf.placeholder(tf.float32, shape=(None,self.n_features))\n",
+    "            self.new_labels   = tf.placeholder(tf.int32  , shape=(None,self.n_labels))\n",
+    "            self.new_y_,self.new_loss = self.structure(features=self.new_features,\n",
+    "                                                       labels=self.new_labels,)\n",
     "            \n",
     "            ### Initialization\n",
     "            self.init_op = tf.global_variables_initializer()\n",
     "            \n",
-    "    def getDenseLayer(self,input_layer,n_output,activation=None):\n",
-    "        n_input = int(input_layer.shape[1])\n",
-    "        W = tf.Variable(\n",
-    "                    tf.truncated_normal( shape=(n_input,n_output) ))\n",
-    "        b = tf.Variable(tf.zeros( shape=(n_output) ))\n",
-    "        s = tf.add(tf.matmul(input_layer,W),b)\n",
+    "    def structure(self,features,labels):\n",
+    "        logits = self.getDenseLayer(features,self.weights['fc1'],self.biases['fc1'])\n",
+    "        \n",
+    "        y_ = tf.nn.softmax(logits)\n",
+    "        loss = tf.reduce_mean(\n",
+    "                 tf.nn.softmax_cross_entropy_with_logits(labels=labels,logits=logits))\n",
+    "\n",
+    "        return (y_,loss)\n",
+    "    \n",
+    "    def getDenseLayer(self,input_layer,weight,bias,activation=None):\n",
+    "        x = tf.add(tf.matmul(input_layer,weight),bias)\n",
     "        if activation:\n",
-    "            x_new = activation(s)\n",
-    "        else:\n",
-    "            x_new = None\n",
-    "        return (W,b,s,x_new)\n",
+    "            x = activation(x)\n",
+    "        return x\n",
     "    \n",
     "    def fit(self,X,y,epochs=10,validation_data=None,test_data=None):\n",
     "        X = self._check_array(X)\n",
@@ -337,7 +343,7 @@
     "            print(\"Epoch %2d/%2d: \"%(epoch+1,epochs))\n",
     "            \n",
     "            # batch gradient descent\n",
-    "            feed_dict = {self.features: X, self.labels: y}\n",
+    "            feed_dict = {self.train_features: X, self.train_labels: y}\n",
     "            _ = self.sess.run(self.train_op, feed_dict=feed_dict)\n",
     "            \n",
     "            # evaluate at the end of this epoch\n",
@@ -362,12 +368,12 @@
     "    \n",
     "    def predict(self,X):\n",
     "        X = self._check_array(X)\n",
-    "        return self.sess.run(self.y_, feed_dict={self.features: X, self.keep_prob: 1.0})\n",
+    "        return self.sess.run(self.new_y_, feed_dict={self.new_features: X})\n",
     "    \n",
     "    def evaluate(self,X,y):\n",
     "        X = self._check_array(X)\n",
     "        y = self._check_array(y)\n",
-    "        return self.sess.run(self.loss, feed_dict={self.features: X, self.labels: y, self.keep_prob: 1.0})\n",
+    "        return self.sess.run(self.new_loss, feed_dict={self.new_features: X, self.new_labels: y})\n",
     "    \n",
     "    def _check_array(self,ndarray):\n",
     "        ndarray = np.array(ndarray)\n",
@@ -387,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,26 +401,26 @@
      "output_type": "stream",
      "text": [
       "Epoch  1/10: \n",
-      " loss =   9.5909, acc = 12.50%, val_loss =   9.5429, val_acc = 12.58%\n",
+      " loss =   8.6880, acc = 11.87%, val_loss =   8.6815, val_acc = 11.12%\n",
       "Epoch  2/10: \n",
-      " loss =   8.4425, acc = 14.65%, val_loss =   8.4002, val_acc = 14.82%\n",
+      " loss =   7.5308, acc = 14.72%, val_loss =   7.5196, val_acc = 13.90%\n",
       "Epoch  3/10: \n",
-      " loss =   7.5826, acc = 16.89%, val_loss =   7.5453, val_acc = 17.00%\n",
+      " loss =   6.8617, acc = 16.11%, val_loss =   6.8439, val_acc = 15.24%\n",
       "Epoch  4/10: \n",
-      " loss =   6.9411, acc = 19.07%, val_loss =   6.9095, val_acc = 19.08%\n",
+      " loss =   6.3180, acc = 17.84%, val_loss =   6.2938, val_acc = 17.08%\n",
       "Epoch  5/10: \n",
-      " loss =   6.4326, acc = 21.19%, val_loss =   6.4074, val_acc = 21.74%\n",
+      " loss =   5.8427, acc = 19.89%, val_loss =   5.8135, val_acc = 19.18%\n",
       "Epoch  6/10: \n",
-      " loss =   6.0045, acc = 23.23%, val_loss =   5.9850, val_acc = 23.56%\n",
+      " loss =   5.4231, acc = 22.34%, val_loss =   5.3909, val_acc = 21.90%\n",
       "Epoch  7/10: \n",
-      " loss =   5.6323, acc = 25.33%, val_loss =   5.6169, val_acc = 25.66%\n",
+      " loss =   5.0536, acc = 24.92%, val_loss =   5.0202, val_acc = 24.30%\n",
       "Epoch  8/10: \n",
-      " loss =   5.3036, acc = 27.45%, val_loss =   5.2912, val_acc = 27.86%\n",
+      " loss =   4.7293, acc = 27.74%, val_loss =   4.6959, val_acc = 27.02%\n",
       "Epoch  9/10: \n",
-      " loss =   5.0113, acc = 29.61%, val_loss =   5.0009, val_acc = 30.26%\n",
+      " loss =   4.4450, acc = 30.37%, val_loss =   4.4122, val_acc = 29.86%\n",
       "Epoch 10/10: \n",
-      " loss =   4.7504, acc = 31.67%, val_loss =   4.7411, val_acc = 32.44%\n",
-      "test_acc = 32.00%\n"
+      " loss =   4.1954, acc = 32.80%, val_loss =   4.1634, val_acc = 32.54%\n",
+      "test_acc = 33.77%\n"
      ]
     }
    ],
